--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
             
         </div>
 
-    <div id="epitaph">
-        <p>"An average lifespan is about thousand months long. . . Our journey on this earth is one thousand. Months. Long" </p>
-    </div>
+ 
 
     <div id="container">
 
@@ -38,7 +36,7 @@
         </form>
 
         <div id="about">
-            <p> This is lifeTrack. <br><br> Lifetrack is a self-help app that can be used to make practical, doable goals each month. <br><br> Start on the left, by calculating how far along you've come in this journey of a thousand months.  </p> <a href="https://medium.com/@mikahado/console-blog-lifetrack-38d3f0a2bafc">Read the lifeTrack blog here.</a>
+            <p> This is lifeTrack. <br><br> Lifetrack is a self-help app that can be used to make practical, doable goals each month. <br><br> Start on the left, by calculating how far along you've come in this journey of a thousand months.  </p> <a target="_blank" href="https://medium.com/@mikahado/console-blog-lifetrack-38d3f0a2bafc">Read the lifeTrack blog here.</a>
 
         </div>
 
@@ -55,15 +53,15 @@
 <!-- MONTH PLAN -->
 
 <form id="comments" action="" method="POST">
-    <h3 id="subtitles">Month Plan</h3>
+    <h3 id="subtitles">Get It Done.</h3>
     <p>
-        What do you want to accomplish <br> or do different this month? <br> <em>Hint: be short and concise! </em><br><br>
+        Describe one significant thing <br> that you will do this month. <br>
         <br>
     <textarea type="textarea" id="monthPlan" name="monthPlan" rows="7" cols="30" style="resize: none" maxlength="180"></textarea>
     </p>
     <input type="submit" id="button" value="Save">
     <br><br>
-    <p id="plans"> My plans for the month:<br><br>
+    <p id="plans">
     </p>
 </form>
 
