'fixed bug - now functional main branch

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
         <title>lifeTrack, a counter for your life's journey</title>
         <link rel="stylesheet" href="./stylesheets/style.css">
-        <script src="./javascripts/index.js"></script>
+
     </head>
     <body>
 
@@ -13,9 +13,9 @@
             <h1>lifeTrack</h1>
         </div>
 
+<!-- dark mode toggle -->
 
-        <button id="dark-mode-toggle" class="dark-mode-toggle" aria-label="toggle dark mode">Light/Dark Mode</button>
-
+    <button id="dark-mode-toggle" class="dark-mode-toggle" aria-label="toggle dark mode">Light/Dark Mode</button>
 
     <div id="container">
 
@@ -68,7 +68,7 @@
         <p> Describe one significant thing <br> that you will do <em>different</em> this month. 
     <br><br>
         <textarea type="textarea" id="monthPlan" name="monthPlan" rows="7" cols="30" style="resize: none" maxlength="180"></textarea>
-        </p> <!-- qq: should this be before the texarea?-->
+        </p> 
         <input type="submit" id="button" value="Save">
         <br><br>
         <p id="plans">
@@ -107,6 +107,9 @@
 
     <br>
 
+    <script src="./javascripts/index2.js"></script>
     </body>
+
+
 </html>
 
