recent changes, committed to main branch

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
     <br>
 
-    <script src="./javascripts/index2.js"></script>
+    <script src="./javascripts/index.js"></script>
     </body>
 
 
