code + assesment tests

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 
     <div id="container">
 
+    <button id="practice-button"> Click me! </button>
+    <div id="new-container">
+
+    </div>
+
     <!-- AGE IN MONTHS FORM -->
 
         <form id="ageInMonths" action="" method="POST">
