phase-1-project improved code

--- a/index.html
+++ b/index.html
@@ -19,11 +19,6 @@
 
     <div id="container">
 
-    <button id="practice-button"> Click me! </button>
-    <div id="new-container">
-
-    </div>
-
     <!-- AGE IN MONTHS FORM -->
 
         <form id="ageInMonths" action="" method="POST">
@@ -91,7 +86,7 @@
 
     <br>
 
-    <!-- REMINDERS -->
+    <!-- TODO: REMINDERS -->
 
     <!-- <div id="reminders">
         <h3 id="subtitles">Reminder</h3>
